<resources>
    <string name="app_name">MovieDBApp</string>
    <string name="error_loading_data_title">Ошибка загрузки данных</string>
    <string name="error_loading_data_message">При загрузке данных возникла ошибка</string>
    <string name="error_loading_data_positive">ОК</string>
    <string name="button_more">Eще</string>
    <string name="top_app_bar">MovieDbApp</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_settings">Settings</string>
    <string name="setting_adult_content">Allow adult content</string>
    <string name="adult_movie">18+</string>
    <string name="setting_long_titles">Enable long titles</string>
    <string name="btn_clear_history">Очистить историю</string>
    <string name="menu_history">History</string>
    <string name="btn_save_note">Сохранить заметку</string>
    <string name="btn_reset_note">Отменить изменения</string>
    <string name="btn_delete_note">Удалить заметку</string>
    <string name="hint_add_note">Введите заметку</string>
    <string name="toast_note_saved">Заметка сохранена</string>
    <string name="toast_note_deleted">Заметка удалена</string>
    <string name="menu_contacts">Contacts</string>
    <string name="dialog_contact_access_title">Доступ к контактам</string>
    <string name="dialog_contact_access_message">Для импорта контактов необходимо предоставить доступ к контактам</string>
    <string name="dialog_contact_access_positive_button">Предоставить доступ</string>
    <string name="dialog_contact_access_negative_button">Отклонить</string>
    <string name="dialog_contact_access_denied_title">Доступ к контактам закрыт</string>
    <string name="dialog_contact_access_denied_message">Для импорта контактов необходимо предоставить доступ к контактам.\nПока этот экран останется пустым</string>
    <string name="toast_phone_failed">Не удалось совершить звонок</string>
    <string name="item_contact_dial">dial</string>
    <string name="item_contact_phone">call</string>
    <string name="show_map">Смотреть на карте</string>
    <string name="dialog_location_access_denied_title">Доступ к геопозиции закрыт</string>
    <string name="dialog_location_access_denied_message">Для отображения вашей геопозиции необходимо предоставить доступ к геопопзиции</string>
    <string name="dialog_location_access_title">Доступ к геопопзиции</string>
    <string name="dialog_location_access_message">Для отображения вашей геопозиции необходимо предоставить доступ к геопопзиции</string>
    <string name="dialog_location_access_positive_button">Предоставить доступ</string>
    <string name="dialog_location_access_negative_button">Отклонить</string>
    <string name="default_fcm_title">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">FCM Channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="geofence_not_available">    Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
</resources>