<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_movie"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_movie"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Название фильма" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_original_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="Оригинальное название фильма" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceCaption"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_original_title"
        tools:text="1990 г." />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_company_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        tools:background="@android:color/holo_blue_light" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="?textAppearanceCaption"
        app:layout_constraintStart_toEndOf="@id/iv_company_logo"
        app:layout_constraintTop_toTopOf="@id/iv_company_logo"
        tools:text="Компания" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/iv_company_logo"
        tools:text="Страна производства" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:text="@string/show_map"
        android:textAppearance="?android:textAppearanceButton"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_country" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        android:tint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="@id/tv_show_map"
        app:layout_constraintStart_toEndOf="@id/tv_show_map"
        app:layout_constraintTop_toTopOf="@id/tv_show_map" />

    <View
        android:id="@+id/v_show_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_show_map"
        app:layout_constraintEnd_toEndOf="@id/iv_arrow"
        app:layout_constraintStart_toStartOf="@id/tv_show_map"
        app:layout_constraintTop_toTopOf="@id/tv_show_map" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_add_note"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/iv_movie"
        app:startIconDrawable="@drawable/ic_baseline_note_add_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="?colorPrimarySurface"
        android:text="@string/btn_save_note"
        android:textColor="?colorOnPrimarySurface"
        app:layout_constraintEnd_toStartOf="@id/btn_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_note" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?colorPrimarySurface"
        android:text="@string/btn_reset_note"
        android:textColor="?colorOnPrimarySurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_save_note"
        app:layout_constraintTop_toBottomOf="@id/til_note" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="#FF888888"
        android:clickable="false"
        android:text="@string/btn_delete_note"
        android:textColor="?colorOnPrimarySurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_save_note"
        app:layout_constraintTop_toBottomOf="@id/btn_save_note" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>